# laundry-monitor

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  homelab.yaml  pyproject.toml
.github/workflows/: container.yml
docs/: architecture.md  configuration.md  security.md
laundry_monitor/: __init__.py  config.py  detector.py  ha.py  main.py  models.py  monitor.py  notify.py  runtime_state.py  web.py
tests/: test_config.py  test_detector.py  test_notify.py  test_status.py  test_web.py
